k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: moneywar-gw
  namespace: feb
spec:
  gatewayClassName: eg
  listeners:
    - name: https-moneywar
      hostname: moneywar.byfeb.com
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: moneywar-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneywar
  namespace: feb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moneywar
  template:
    metadata:
      labels:
        app: moneywar
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: moneywar
          image: hub.umceko.com/byfeb/moneywar:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: moneywar-service
  namespace: feb
spec:
  selector:
    app: moneywar
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moneywar
  namespace: feb
spec:
  hostnames:
    - moneywar.byfeb.com
  parentRefs:
    - name: feb-gw
      namespace: feb
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: moneywar-service
          port: 80
